--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,6 +4,22 @@
 
             <div id="sidebar">
                 
+                 <div class="widget widget_recent_entries">  
+                     <h3>Winning in the API Economy</h3>
+                     <center>
+                        <table width="250" align="center">
+                        <tbody>
+                            <tr>
+                                <td align="center"><a href="http://bit.ly/1cHBhd5" target="_blank"><img src="https://s3.amazonaws.com/kinlane-productions/api-service-providers/3Scale/ebook-3scale.png" width="200" style="border: 0px solid #000;" /></a></td>
+                            </tr>
+                            <tr>
+                                <td align="center"><strong><a href="http://bit.ly/1cHBhd5" target="_blank">Download as PDF</a></strong></td>
+                            </tr>
+                        </tbody>
+                        </table>                     
+                     </center>
+                 </div>                 
+                
                 {% if page.title == 'Embeddable' %}
     
                 {% else %}
@@ -16,9 +32,8 @@
                 {% endif %}     
 
                  <div class="widget widget_recent_entries">  
-                 
-                     <p align="center"><a href="/network.html"><img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/network/API-Evangelist-Network.png" width="215" /></a></p>
-                    
+                    <h3>API Evangelist Network</h3>
+                     <p align="center"><a href="http://apievangelist.com/network.html"><img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/network/API-Evangelist-Network.png" width="215" /></a></p>                   
                  </div>
                 
                  <div class="widget widget_recent_entries">  
@@ -59,7 +74,7 @@
                 <h3>Latest Blog Posts</h3>
                 <ul>                
                 
-                    {% for post in site.posts limit:10 %}
+                    {% for post in site.posts limit:25 %}
                         <li><a href="{{ post.url }}">{{ post.title }}</a></li>    
                     {% endfor %}   
                                 
