--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,17 +1,17 @@
-<a href="/about.html"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
+<a href="https://github.com/kinlane/embeddable"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
 <div id="wrapper">
     
      <div id="header" class="col-full">
-        <div id="logo"><a href="" title=""><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist/api-evangelist-logo-400.png"></a></div> 
+        <div id="logo"><a href="http://apievangelist.com" title=""><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist/api-evangelist-logo-400.png"></a></div> 
         
     </div>
     
     <div id="navigation" class="col-full">
 
         <ul id="main-nav" class="nav fl">
-            <li class="{% if page.title == 'API Deployment' %}page_item current_page_item{% else %}page_item page-item-2{% endif %}"><a href="/index.html" title="Home">Home</a></li>
-            <li class="{% if page.title == 'API Deployment - News and Analysis' %}page_item current_page_item{% else %}page_item page-item-2{% endif %}"><a href="/blog/" title="Home">News & Analysis</a></li>
-            <li class="{% if page.title == 'About API Deployment' %}page_item current_page_item{% else %}page_item page-item-2{% endif %}"><a href="/about.html" title="About">About this Site</a></li>
+            <li class="{% if page.title == 'Embeddable' %}page_item current_page_item{% else %}page_item page-item-2{% endif %}"><a href="/index.html" title="Home">Home</a></li>
+            <li class="{% if page.title == 'Embeddable - News and Analysis' %}page_item current_page_item{% else %}page_item page-item-2{% endif %}"><a href="/blog/" title="Home">News & Analysis</a></li>
+            <li class="{% if page.title == 'About Embeddable' %}page_item current_page_item{% else %}page_item page-item-2{% endif %}"><a href="/about.html" title="About">About this Site</a></li>
          </ul>
         
         <ul class="rss fr">
