--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,6 +4,18 @@
 
             <div id="sidebar">
                 
+               <div class="widget widget_recent_entries">  
+                     <center>
+                        <table width="250" align="center">
+                        <tbody>
+                            <tr>
+                                <td align="center"><a href="http://bit.ly/1oCl65e" target="_blank"><img src="https://s3.amazonaws.com/kinlane-productions/events/api-strategy-practice-chicago/api-strategy-practice-chicago-logo.png" width="250" style="border: 0px solid #000;" /></a></td>
+                            </tr>
+                        </tbody>
+                        </table>                     
+                     </center>
+                 </div> 
+
                  <div class="widget widget_recent_entries">  
                      <h3>Winning in the API Economy</h3>
                      <center>
@@ -18,23 +30,20 @@
                         </tbody>
                         </table>                     
                      </center>
-                 </div>                 
-                
-                {% if page.title == 'Embeddable' %}
-    
-                {% else %}
-                    <div class="widget widget_recent_entries"> 
-                        <center>      
-                             <p style="font-size: 16px;"><strong>Embeddable</strong></p>
-                            <img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/services/bw-embeddable.png" width="190" />
-                        </center>
-                    </div>
-                {% endif %}     
-
+                 </div>           
+                 
                  <div class="widget widget_recent_entries">  
-                    <h3>API Evangelist Network</h3>
-                     <p align="center"><a href="http://apievangelist.com/network.html"><img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/network/API-Evangelist-Network.png" width="215" /></a></p>                   
-                 </div>
+                     <h3>API Commons</h3>
+                     <center>
+                        <table width="250" align="center">
+                        <tbody>
+                            <tr>
+                                <td align="center"><a href="http://bit.ly/1e27KIc" target="_blank"><img src="https://s3.amazonaws.com/kinlane-productions/api-commons/api-commons-icon.png" width="150" style="border: 0px solid #000;" /></a></td>
+                            </tr>
+                        </tbody>
+                        </table>                     
+                     </center>
+                 </div> 
                 
                  <div class="widget widget_recent_entries">  
                      
